2011-04-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	depcomp tests: don't reject slower dependency extractors
	* tests/depcomp8b.test: Add the `--enable-dependency-tracking'
	option to `configure' invocations, so that slower dependency
	extractors are not rejected.
	* tests/depcomp8b.test: Likewise.  Also ...
	(foo.c): ... since we are at it, fix spacing to be consistent
	with GNU coding standards.

2011-04-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	m4: add missing serial numbers to a few files
	Related to automake bug#8483.
	* m4/amversion.in: Add serial number.
	* m4/auxdir.m4: Likewise.
	* m4/gcj.m4: Likewise.
	* m4/install-sh.m4: Likewise.
	* m4/mkdirp.m4: Likewise.
	* m4/python.m4: Likewise.
	* m4/runlog.m4: Likewise.
	* m4/strip.m4: Likewise.
	* m4/upc.m4: Likewise.

2011-04-16  Jim Meyering  <meyering@redhat.com>

	depcomp: correct invalid sed invocation
	* lib/depcomp: Insert missing -e before '/:$/d'.
	Otherwise, that use of sed would treat '/:$/d' as a file name.

2011-04-14  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintainer check: quote literal `$' in Makefile rule
	* Makefile.am (sc_tests_PATH_SEPARATOR): Escape literal `$'
	character in double-quoted string.  Fix a bug in which the rule
	emitted an erroneously empty substring in its error message.

2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: test for automake bug#8485 (known regression)
	* tests/yacc-dist-nobuild-subdir.test: New test.
	* tests/Makefile.am (TESTS, XFAIL_TESTS): Update.

2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	test defs: define default $distdir (help reducing duplication)
	* tests/defs.in ($distdir): New variable, might be used in
	testcases checking distribution-related features.
	* tests/pr9.test: Use it.
	* tests/subdir9.test: Likewise.
	* tests/vtexi3.test: Add comment explaining why we redefine
	$distdir in this test.

2011-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
