@@ -8660,9 +8660,11 @@ allows to specify inter-test dependencies, lazy reruns of tests that
 have not completed in a prior run, summary and verbose output in
 @samp{RST} (reStructuredText) and @samp{HTML} format, and hard errors
 for exceptional failures.  Similar to the simple test driver,
-@code{TESTS_ENVIRONMENT}, @code{AM_COLOR_TESTS}, @code{XFAIL_TESTS}, and
+@code{AM_COLOR_TESTS}, @code{XFAIL_TESTS}, and
 the @code{check_*} variables are honored, and the environment variable
-@env{srcdir} is set during test execution.
+@env{srcdir} is set during test execution. Also, @code{TESTS_ENVIRONMENT}
+is still honored, but is complemented by a new developer-reserved variable
+@code{AM_TESTS_SETUP} (described below).
 
 This test driver is still experimental and may undergo changes in order
 to satisfy additional portability requirements.
@@ -8675,6 +8677,16 @@ a summary log file, @code{TEST_SUITE_LOG}, which defaults to
 depends upon log files created for each single test program listed in
 @code{TESTS}, which in turn contain all output produced by the
 corresponding tests.
+
+@vindex VERBOSE
+As with the simple driver above, by default one status line is printed
+per completed test, and a short summary after the suite has completed.
+However, standard output and standard error of the test are redirected
+to a per-test log file, so that parallel execution does not produce
+intermingled output.  The output from failed tests is collected in the
+@file{test-suite.log} file.  If the variable @samp{VERBOSE} is set, this
+file is output after the summary.  For best results, the tests should be
+verbose by default now.
 
 @vindex TEST_EXTENSIONS
 @vindex TEST_LOGS
@@ -8724,15 +8736,28 @@ and @samp{./wrapper-script -d baz} to produce @file{foo.log},
 @samp{TESTS_ENVIRONMENT} variable is still expanded before the driver,
 but should be reserved for the user.
 
-@vindex VERBOSE
-As with the simple driver above, by default one status line is printed
-per completed test, and a short summary after the suite has completed.
-However, standard output and standard error of the test are redirected
-to a per-test log file, so that parallel execution does not produce
-intermingled output.  The output from failed tests is collected in the
-@file{test-suite.log} file.  If the variable @samp{VERBOSE} is set, this
-file is output after the summary.  For best results, the tests should be
-verbose by default now.
+@vindex AM_TESTS_SETUP
+The @code{AM_TESTS_SETUP} variable can be used to run initialization code
+and set environment variables for the tests' runs.  The user can still
+employ the @code{TESTS_ENVIRONMENT} variable to override settings from
+@code{AM_TESTS_SETUP}.  Note that, for implementation reasons, if the
+@code{AM_TESTS_SETUP} variable is set, its contents @emph{must} be
+terminated by a semicolon.
+
+@example
+# The tests below are expected to use the file descriptor passed
+# in the environment variable 'warn_fileno' to print warnings
+# (e.g., about skipped and failed tests).  If this variable were
+# to be set to `2' (i.e. default stderr), the warnings would be
+# redirected by the automake parallel-tests driver into the .log
+# files.  But the AM_TESTS_SETUP definition below will cause the
+# reasons for skip/failure to be printed to the console instead.
+# The user can still override this by setting TESTS_ENVIRONMENT
+# to e.g. `warn_fileno=2' at make runtime, which will cause the
+# warnings to be sent to the .log files again.
+TESTS = test1.sh test2.sh ...
+AM_TESTS_SETUP = exec 9>&2; warn_fileno=9; export warn_fileno;
+@end example
 
 @trindex mostlyclean
 @trindex check-html
