@@ -1,5 +1,17 @@
 2011-04-17  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	check: new developer-reserved AM_TESTS_SETUP variable
+	For reference, see the discussion at:
+	<http://lists.gnu.org/archive/html/automake-patches/2011-01/msg00213.html>
+	* lib/am/check.am [%?PARALLEL_TESTS%] (am__check_pre): Pass also
+	$(AM_TESTS_SETUP).  Comments updated, and some typos fixed.
+	* doc/automake.texi (Simple Tests using parallel-tests): Document
+	AM_TESTS_SETUP.  Reorder some of the existing documentation a bit.
+	* tests/parallel-tests-am_tests_setup.test: New test.
+	From a suggestion by Ralf Wildenhues.
+
+2011-04-17  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	depcomp tests: don't reject slower dependency extractors
 	* tests/depcomp8b.test: Add the `--enable-dependency-tracking'
 	option to `configure' invocations, so that slower dependency
